<resources>
    <string name="app_name">Navigation Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonOne">Display Image 1</string>
    <string name="buttonTwo">Display Image 2</string>
    <string name="buttonThree">Display Image 3</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="image">TODO</string>
</resources>